--- a/src/rsu/map-spat-broadcast/Makefile
+++ b/src/rsu/map-spat-broadcast/Makefile
@@ -1,9 +1,8 @@
-SDK_ROOT=../../../../sdk
-MAKE_ROOT=$(SDK_ROOT)/make
+MAKE_ROOT=../make
 include $(MAKE_ROOT)/header.mk
 
-SRC  = MMITSS_MRP_MAP_SPAT_Broadcast_ASN.cpp Signal.cpp SignalController.cpp NMAP.cpp GeoCoord.cpp
-TGT  = MMITSS_MRP_MAP_SPAT_Broadcast_ASN
+SRC  = M_MapSpatBroadcast.cpp Signal.cpp SignalController.cpp NMAP.cpp GeoCoord.cpp
+TGT  = M_MapSpatBroadcast
 LIBS+= -lnetsnmp -lstdc++ -lm
 
 OBJ = $(patsubst %.cpp, %.o, ${SRC})
