Edited Makefile for Priority-request-server. removed the SDK root, edited the make root to reflect the current directory structure and changed the target and matching .cpp from MMITSS_PriorityRequestServer_ASN to M_PriorityRequestServer

--- a/src/rsu/priority-request-server/Makefile
+++ b/src/rsu/priority-request-server/Makefile
@@ -1,9 +1,8 @@
-SDK_ROOT=../../../../sdk
-MAKE_ROOT=$(SDK_ROOT)/make
+MAKE_ROOT=../../../make
 include $(MAKE_ROOT)/header.mk
 
-SRC += MMITSS_MRP_PriorityRequestServer_ASN.cpp ReqEntry.cpp  PriorityConfig.cpp IntLanePhase.cpp ReqEntryListHandle.cpp AccelerationSet4Way.cpp PositionLocal3D.cpp BasicVehicle.cpp Brakes.cpp Motion.cpp
-TGT:=MMITSS_MRP_PriorityRequestServer_ASN
+SRC += M_PriorityRequestServer.cpp ReqEntry.cpp  PriorityConfig.cpp IntLanePhase.cpp ReqEntryListHandle.cpp AccelerationSet4Way.cpp PositionLocal3D.cpp BasicVehicle.cpp Brakes.cpp Motion.cpp
+TGT:=M_PriorityRequestServer
 LIBS+= -lnetsnmp -lstdc++ 
 OBJ = $(patsubst %.cpp, %.o, ${SRC})
 include $(MAKE_ROOT)/rules.mk
