Edited Makefile for TrafficControllerInterface. removed the SDK root, edited the make root to reflect the current directory structure and changed the target and matching .cpp from MMITSS_Traffic_Controller_Interface to M_TrafficControllerInterface

--- a/src/rsu/traffic-control-interface/Makefile
+++ b/src/rsu/traffic-control-interface/Makefile
@@ -1,10 +1,9 @@
-SDK_ROOT=../../../sdk
-MAKE_ROOT=$(SDK_ROOT)/make
+MAKE_ROOT=../../../make
 include $(MAKE_ROOT)/header.mk
 
-SRC += MMITSS_MRP_TrafficControllerInterface.cpp Signal.cpp Array.cpp Config.cpp
-TGT:=MMITSS_MRP_TrafficControllerInterface
-LIBS+= -lnetsnmp -lstdc++ -lm
+SRC += M_TrafficControllerInterface.cpp Signal.cpp Array.cpp Config.cpp
+TGT:=M_TrafficControllerInterface
+THIRDPARTYLIBS+= -lnetsnmp -lstdc++ -lm
 
 OBJ = $(patsubst %.cpp, %.o, ${SRC})
 
