Further changes to makefiles

--- a/src/obu/map-spat-receiver/Makefile
+++ b/src/obu/map-spat-receiver/Makefile
@@ -1,11 +1,10 @@
-SDK_ROOT=../../../../sdk
-MAKE_ROOT=$(SDK_ROOT)/make
+BUILD_ROOT=../../..
+MAKE_ROOT=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/header.mk
 
-SRC  = MMITSS_OBE_MAP_SPAT_Receiver_ASN.cpp NMAP.cpp GeoCoord.cpp
-TGT  = MMITSS_OBE_MAP_SPAT_Receiver_ASN
-LIBS+= -lstdc++ -lm -luClibc++ -lj2735-asd
-
+SRC  = M_MapSpatReceiver.cpp NMAP.cpp GeoCoord.cpp
+TGT  = M_MapSpatReceiver
+LIBS+= -lstdc++ -lm 
 OBJ = $(patsubst %.cpp, %.o, ${SRC})
 
 include $(MAKE_ROOT)/rules.mk
