--- a/src/obu/priority-request-generator/Makefile
+++ b/src/obu/priority-request-generator/Makefile
@@ -1,13 +1,11 @@
-SDK_ROOT=../../../../sdk
-MAKE_ROOT=$(SDK_ROOT)/make
+BUILD_ROOT=../../..
+MAKE_ROOT=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/header.mk
 
-
-
-SRC  =  MMITSS_OBE_PriorityRequestGenerator_ASN.cpp  GeoCoord.cpp NMAP.cpp AccelerationSet4Way.cpp BasicVehicle.cpp Motion.cpp PositionLocal3D.cpp Brakes.cpp ReqEntry.cpp MAPEntry.cpp
-TGT  = MMITSS_OBE_PriorityRequestGenerator_ASN
+SRC  =  M_PriorityRequestGenerator.cpp  GeoCoord.cpp NMAP.cpp AccelerationSet4Way.cpp BasicVehicle.cpp Motion.cpp PositionLocal3D.cpp Brakes.cpp ReqEntry.cpp MAPEntry.cpp
+TGT  = M_PriorityRequestGenerator
+LIBS += -L$(BUILD_ROOT)/3rdparty/net-snmp/lib/
 LIBS+= -lnetsnmp -lstdc++ -lm 
-
 
 OBJ = $(patsubst %.cpp, %.o, ${SRC})
 
