--- a/src/rsu/map-spat-broadcast/Makefile
+++ b/src/rsu/map-spat-broadcast/Makefile
@@ -1,10 +1,13 @@
-MAKE_ROOT=../../../make
+BUILD_ROOT=../../..
+MAKE_ROOT=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/header.mk
 
 SRC  = M_MapSpatBroadcast.cpp Signal.cpp SignalController.cpp NMAP.cpp GeoCoord.cpp
 TGT  = M_MapSpatBroadcast
+LIBS += -L$(BUILD_ROOT)/3rdparty/net-snmp/lib/
 LIBS+= -lnetsnmp -lstdc++ -lm
-
+INCLUDES += -I$(BUILD_ROOT)/3rdparty/
+ 
 OBJ = $(patsubst %.cpp, %.o, ${SRC})
 
 include $(MAKE_ROOT)/rules.mk
