updated individual makefiles to remove the src files that are in common. Updated header.mk to find the new common library and new common include path.

--- a/src/rsu/long-term-planning/Makefile
+++ b/src/rsu/long-term-planning/Makefile
@@ -2,7 +2,7 @@ BUILD_ROOT=../../..
 MAKE_ROOT=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/header.mk
 
-SRC += LongTermPlanning.cpp Array.cpp Config.cpp ReqEntry.cpp Signal.cpp PriorityRequest.cpp GetInfo.cpp PositionLocal3D.cpp
+SRC += LongTermPlanning.cpp Array.cpp Config.cpp ReqEntry.cpp Signal.cpp GetInfo.cpp PositionLocal3D.cpp
 TGT:=LongTermPlanning
 LIBS += -L$(BUILD_ROOT)/3rdparty/net-snmp/lib/
 LIBS += -L$(BUILD_ROOT)/3rdparty/glpk/lib/
