--- a/src/rsu/performance-observer/Makefile
+++ b/src/rsu/performance-observer/Makefile
@@ -2,7 +2,7 @@ BUILD_ROOT=../../..
 MAKE_ROOT=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/header.mk
 
-SRC += M_PerformanceObserver.cpp AccelerationSet4Way.cpp BasicVehicle.cpp Brakes.cpp GeoCoord.cpp NMAP.cpp PositionLocal3D.cpp Array.cpp Signal.cpp Config.cpp
+SRC += M_PerformanceObserver.cpp BasicVehicle.cpp PO_Brakes.cpp NMAP.cpp PositionLocal3D.cpp Array.cpp Signal.cpp Config.cpp
 TGT:= M_PerformanceObserver
 
 INCLUDES += -I$(BUILD_ROOT)/3rdparty/
