--- a/src/rsu/priority-request-server/Makefile
+++ b/src/rsu/priority-request-server/Makefile
@@ -2,7 +2,7 @@ BUILD_ROOT=../../..
 MAKE_ROOT=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/header.mk
 
-SRC += M_PriorityRequestServer.cpp ReqEntry.cpp  PriorityConfig.cpp IntLanePhase.cpp ReqEntryListHandle.cpp AccelerationSet4Way.cpp PositionLocal3D.cpp BasicVehicle.cpp Brakes.cpp Motion.cpp
+SRC += M_PriorityRequestServer.cpp ReqEntry.cpp  PriorityConfig.cpp IntLanePhase.cpp ReqEntryListHandle.cpp PositionLocal3D.cpp BasicVehicle.cpp  
 TGT:=M_PriorityRequestServer
 LIBS += -L$(BUILD_ROOT)/3rdparty/net-snmp/lib/
 LIBS+= -lnetsnmp -lstdc++ 
