--- a/src/obu/priority-request-generator/Makefile
+++ b/src/obu/priority-request-generator/Makefile
@@ -2,7 +2,7 @@ BUILD_ROOT=../../..
 MAKE_ROOT=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/header.mk
 
-SRC  =  M_PriorityRequestGenerator.cpp  GeoCoord.cpp NMAP.cpp AccelerationSet4Way.cpp BasicVehicle.cpp Motion.cpp PositionLocal3D.cpp Brakes.cpp ReqEntry.cpp MAPEntry.cpp
+SRC  =  M_PriorityRequestGenerator.cpp NMAP.cpp BasicVehicle.cpp PositionLocal3D.cpp ReqEntry.cpp MAPEntry.cpp
 TGT  = M_PriorityRequestGenerator
 LIBS += -L$(BUILD_ROOT)/3rdparty/net-snmp/lib/
 LIBS+= -lnetsnmp -lstdc++ -lm 
