--- a/src/rsu/priority-solver/Makefile
+++ b/src/rsu/priority-solver/Makefile
@@ -2,7 +2,7 @@ BUILD_ROOT=../../..
 MAKE_ROOT=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/header.mk
 
-SRC += M_PrioritySolver.cpp Array.cpp Config.cpp ReqEntry.cpp Signal.cpp PositionLocal3D.cpp PriorityRequest.cpp GetInfo.cpp EVLS.cpp
+SRC += M_PrioritySolver.cpp Array.cpp Config.cpp ReqEntry.cpp Signal.cpp PositionLocal3D.cpp GetInfo.cpp EVLS.cpp
 TGT:=M_PrioritySolver
 LIBS += -L$(BUILD_ROOT)/3rdparty/net-snmp/lib/
 LIBS += -L$(BUILD_ROOT)/3rdparty/glpk/lib/
