--- a/src/obu/priority-request-generator/Makefile
+++ b/src/obu/priority-request-generator/Makefile
@@ -4,8 +4,9 @@ include $(MAKE_ROOT)/header.mk
 
 SRC  =  M_PriorityRequestGenerator.cpp NMAP.cpp BasicVehicle.cpp PositionLocal3D.cpp ReqEntry.cpp MAPEntry.cpp
 TGT  = M_PriorityRequestGenerator
+LIBS += -L$(BUILD_ROOT)/lib/
 LIBS += -L$(BUILD_ROOT)/3rdparty/net-snmp/lib/
-LIBS+= -lnetsnmp -lstdc++ -lm 
+LIBS+= -lnetsnmp -lstdc++ -lm -lj2735-linux
 
 OBJ = $(patsubst %.cpp, %.o, ${SRC})
 
