updated makefile for common shared library to build the library in the mmitss/lib folder

--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -5,7 +5,7 @@ INCLUDES = -I. -I$(BUILD_ROOT)/include/common
 CC = gcc # C compiler
 CFLAGS = -fPIC -Wall -Wextra -O2 -g # C flags
 LDFLAGS = -shared  # linking flags
-TGT = libmmitss-common.so
+TGT = $(BUILD_ROOT)/lib/libmmitss-common.so
 SRC = AccelerationSet4Way.cpp Brakes.cpp GeoCoord.cpp Motion.cpp PriorityRequest.cpp
 OBJ = $(patsubst %.cpp, %.o, ${SRC})
 
