--- a/src/tools/SimpleTest/Makefile
+++ b/src/tools/SimpleTest/Makefile
@@ -4,7 +4,8 @@ MAKE_ROOT :=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/newheader.mk
 
 INCLUDES    := -I$(J2735_INCL) -I$(JSONCPP_INCL) # tell the compiler where to find the j2735 and json include directories
-LDFLAGS     := -Wl,-rpath=$(J2735_SO_DIR) # tell the linker to add a path to the json shared lib --- we probably want to move this into a default rather than a hard coded location
+LDFLAGS     := -Wl,-rpath=$(J2735_SO_DIR) # tell the linker to add a path to the json shared lib 
+#-Wl is used to pass the option(rpath) to the linker --- we probably want to move this into a default rather than a hard coded location
 LIBS        := -L$(J2735_SO_DIR) -L$(JSONCPP_LIB) -ldsrc -lasn -ljsoncpp1_8_4 #tell the linker where to find the j2735 and json libraries
 
 #cpp's go here
@@ -13,10 +14,8 @@ SRC += BSMEncoder.cpp
 TARGET = BSMEncoder
 
 # list the .o's corresponding to .cpp's
-OBJECTS = $(patsubst %.cpp, %.o, ${SRC})
+# see: https://www.gnu.org/software/make/manual/html_node/Text-Functions.html
+OBJECTS = $(patsubst %.cpp, %.o, $(SRC))
 
 include $(MAKE_ROOT)/newrules.mk
 
-#the executable depends on the .o's so we link
-$(TARGET): $(OBJECTS)
-	$(CPP) -o $(TARGET) $(OBJECTS) $(LDFLAGS) $(LIBS)
