--- a/src/tools/UdpSocketTester/testSender/Makefile
+++ b/src/tools/UdpSocketTester/testSender/Makefile
@@ -3,13 +3,13 @@ BUILD_ROOT=../../../..
 MAKE_ROOT :=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/newheader.mk
 
-INCLUDES    := -I$(J2735_INCL) -I$(JSONCPP_INCL)# tell the compiler where to find the j2735 and json include directories
+INCLUDES    := -I$(J2735_INCL) -I$(JSONCPP_INCL) -I$(BUILD_ROOT)/include/common# tell the compiler where to find the j2735 and json include directories
 LDFLAGS     := -Wl,-rpath=$(J2735_SO_DIR) # tell the linker to add a path to the json shared lib 
 #-Wl is used to pass the option(rpath) to the linker --- we probably want to move this into a default rather than a hard coded location
-LIBS        := -L$(J2735_SO_DIR) -L$(JSONCPP_LIB) -ldsrc -lasn -ljsoncpp1_8_4 #tell the linker where to find the j2735 and json libraries
+LIBS        := -L$(J2735_SO_DIR) -L$(JSONCPP_LIB) -ldsrc -lasn -ljsoncpp1_8_4 -L$(BUILD_ROOT)/lib -lmmitss-common#tell the linker where to find the j2735 and json libraries
 
 #cpp's go here
-SRC += testSender.cpp ../BasicVehicle.cpp ../Position3D.cpp ../UdpSocket.cpp
+SRC += testSender.cpp ../BasicVehicle.cpp ../Position3D.cpp
 #the name of the executable goes here
 TARGET = testSender
 
