In progress - Adding exception handling for UDP socket if socket creation or binding fails

--- a/src/tools/UdpSocketTester/testReceiver/Makefile
+++ b/src/tools/UdpSocketTester/testReceiver/Makefile
@@ -9,9 +9,9 @@ LDFLAGS     := -fPIC -Wl,-rpath=$(J2735_SO_DIR) # tell the linker to add a path 
 LIBS        := -L$(J2735_SO_DIR) -L$(JSONCPP_LIB) -L$(BUILD_ROOT)/3rdparty/jsoncpp -L$(BUILD_ROOT)/lib -ldsrc -lasn -ljsoncpp1_8_4 -lmmitss-common#tell the linker where to find the j2735 and json libraries
 
 #cpp's go here
-SRC += testReceiver.cpp
+SRC += testReceiver.cpp ../UdpSocket.cpp
 #the name of the executable goes here
-TARGET = testReceiver
+TARGET = testReceiver 
 
 # list the .o's corresponding to .cpp's
 # see: https://www.gnu.org/software/make/manual/html_node/Text-Functions.html
