Exception handling added to UdpSocket class. Integrated back to mmitss-common.so, deleted BasicVehicleTester, as the UdpSocekt tester includes the testing for BasicVehicle as well. Added another constructor to UdpSocket class, which creates a non-blocking udp socket object. Need to add headers to all common files

--- a/src/common/Makefile(LegacyCode)
+++ b/src/common/Makefile(LegacyCode)
@@ -1,13 +1,13 @@
 # MMITSS-common.so Makefile
 
 BUILD_ROOT=../..
-INCLUDES = -I. -I$(BUILD_ROOT)/include/common -I$(BUILD_ROOT)/3rdparty/jsoncpp/include
+INCLUDES = -I. -I$(BUILD_ROOT)/include/common 
 CC = gcc # C compiler
-CFLAGS = -fPIC -Wall -Wextra -O2 -g -ljsoncpp1_8_4# C flags
+CFLAGS = -fPIC -Wall -Wextra -O2 -g# C flags
 LIBS = -L$(BUILD_ROOT)/3rdparty/jsoncpp
 LDFLAGS = -shared # linking flags
 TGT = $(BUILD_ROOT)/lib/libmmitss-common.so
-SRC = AccelerationSet4Way.cpp Brakes.cpp GeoCoord.cpp Motion.cpp PriorityRequest.cpp BasicVehicle.cpp Position3D.cpp UdpSocket.cpp
+SRC = AccelerationSet4Way.cpp Brakes.cpp GeoCoord.cpp Motion.cpp PriorityRequest.cpp
 OBJ = $(patsubst %.cpp, %.o, ${SRC})
 
 $(TGT) : $(OBJ)
