Interim commit, SRM partiallyupdated

--- a/src/rsu/priority-request-server/Makefile
+++ b/src/rsu/priority-request-server/Makefile
@@ -7,8 +7,10 @@ TGT:=M_PriorityRequestServer
 LIBS += -L$(BUILD_ROOT)/lib/
 LIBS += -L$(BUILD_ROOT)/3rdparty/net-snmp/lib/
 LIBS += -L$(BUILD_ROOT)/3rdparty/jsoncpp/lib/
-LIBS+= -lnetsnmp -lstdc++ -lj2735-linux
+LIBS+= -lnetsnmp -lstdc++ -lj2735-linux -ljsoncpp1_8_4
 INCLUDES += -I$(BUILD_ROOT)/3rdparty/
+INCLUDES += -I$(BUILD_ROOT)/3rdparty/jsoncpp/include
+INCLUDES += -I$(BUILD_ROOT)/3rdparty/asn1j2735/include
 
 OBJ = $(patsubst %.cpp, %.o, ${SRC})
 include $(MAKE_ROOT)/rules.mk
