Working on Lane Phase Mapping

--- a/src/rsu/priority-request-server/Makefile
+++ b/src/rsu/priority-request-server/Makefile
@@ -2,7 +2,7 @@ BUILD_ROOT=../../..
 MAKE_ROOT=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/header.mk
 
-SRC += M_PriorityRequestServer.cpp ReqEntry.cpp IntLanePhase.cpp ManageRequestList.cpp PositionLocal3D.cpp BasicVehicle.cpp  
+SRC += M_PriorityRequestServer.cpp ReqEntry.cpp IntLanePhase.cpp ManageRequestList.cpp PositionLocal3D.cpp BasicVehicle.cpp SignalRequest.cpp IntersectionAccessPoint.cpp ExpectedTimeOfArrival.cpp 
 TGT:=M_PriorityRequestServer
 LIBS += -L$(BUILD_ROOT)/lib/
 LIBS += -L$(BUILD_ROOT)/3rdparty/net-snmp/lib/
@@ -11,6 +11,7 @@ LIBS+= -lnetsnmp -lstdc++ -lj2735-linux -ljsoncpp1_8_4
 INCLUDES += -I$(BUILD_ROOT)/3rdparty/
 INCLUDES += -I$(BUILD_ROOT)/3rdparty/jsoncpp/include
 INCLUDES += -I$(BUILD_ROOT)/3rdparty/asn1j2735/include
+INCLUDES += -I$(BUILD_ROOT)/3rdparty/mapengine/include
 
 OBJ = $(patsubst %.cpp, %.o, ${SRC})
 include $(MAKE_ROOT)/rules.mk
