--- a/src/rsu/priority-request-server/IntersectionConfig.json
+++ b/src/rsu/priority-request-server/IntersectionConfig.json
@@ -1,9 +1,8 @@
 {
     "IntersectionInfo":
     {
-        "intersectionID" : "26807",
-        "regionalID" : "0",
-        "mapFileName" :   "campbell-speedway",
-        "mapFileDirectory" : "map/campbell-speedway.map.payload"
+        "intersectionID" : 26380,
+        "regionalID" : 0,
+        "mapFileName" :   "mountain-speedway"
     }
 }
