Add testing file

--- a/src/rsu/priority-request-server/IntersectionConfig.json
+++ b/src/rsu/priority-request-server/IntersectionConfig.json
@@ -1,8 +1,8 @@
 {
     "IntersectionInfo":
     {
-        "intersectionID" : 26380,
+        "intersectionID" : 26807,
         "regionalID" : 0,
-        "mapFileName" :   "mountain-speedway"
+        "mapFileName" :   "campbell-speedway"
     }
 }
