Transceiver has been updated

--- a/src/common/MsgTransceiver/ConfigurationInfo.json
+++ b/src/common/MsgTransceiver/ConfigurationInfo.json
@@ -1,5 +1,5 @@
 {
-    "IntersectionName": "campbell-speedway",
+    "IntersectionName": "mountain-speedway",
     "PortNumber":
 	{
 		"MessageTransceiver":
