--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -3,15 +3,15 @@ BUILD_ROOT=../..
 MAKE_ROOT :=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/newheader.mk
 
-INCLUDES    := -I$(J2735_INCL) -I$(JSONCPP_INCL) -I$(BUILD_ROOT)/include/common# tell the compiler where to find the j2735 and json include directories
+INCLUDES    := -I$(J2735_INCL) -I$(BUILD_ROOT)/include/common# tell the compiler where to find the j2735 and json include directories
 CPPFLAGS	:= $(CPPFLAGS) -fPIC
 LDFLAGS     := -shared -Wl,-rpath=$(J2735_SO_DIR) # tell the linker to add a path to the json shared lib 
 #-Wl is used to pass the option(rpath) to the linker --- we probably want to move this into a default rather than a hard coded location
-LIBS        := -L$(J2735_SO_DIR) -L$(JSONCPP_LIB) -L$(BUILD_ROOT)/3rdparty/jsoncpp -ldsrc -lasn -ljsoncpp1_8_4#tell the linker where to find the j2735 and json libraries
+LIBS        := -L$(J2735_SO_DIR) -ldsrc -lasn #tell the linker where to find the j2735 and json libraries
 
 
 #cpp's go here
-SRC += AccelerationSet4Way.cpp Brakes.cpp GeoCoord.cpp Motion.cpp PriorityRequest.cpp BasicVehicle.cpp Position3D.cpp UdpSocket.cpp SignalRequest.cpp SignalStatus.cpp IntersectionAccessPoint.cpp ExpectedTimeOfArrival.cpp
+SRC += AccelerationSet4Way.cpp Brakes.cpp GeoCoord.cpp Motion.cpp PriorityRequest.cpp BasicVehicle.cpp Position3D.cpp UdpSocket.cpp SignalRequest.cpp SignalStatus.cpp IntersectionAccessPoint.cpp ExpectedTimeOfArrival.cpp jsoncpp.cpp
 #the name of the executable goes here
 TARGET = $(BUILD_ROOT)/lib/libmmitss-common.so
 
