Update makefiles to use x86 or arm version of mmitss common lib

--- a/src/rsu/priority-solver/Makefile
+++ b/src/rsu/priority-solver/Makefile
@@ -4,10 +4,10 @@ MAKE_ROOT :=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/newheader.mk
 
 
-INCLUDES    := -I$(BUILD_ROOT)/3rdparty/ -I$(BUILD_ROOT)/include/common/ -I$(NETSNMP_INCL) -I$(GLPK_INCL)  # tell the compiler where to find the j2735 and json include directories
-LDFLAGS     := -Wl,-rpath=$(J2735_SO_DIR) # tell the linker to add a path to the j2735 shared lib 
+INCLUDES    := -I$(BUILD_ROOT)/3rdparty/ -I$(COMMON_INCL) -I$(NETSNMP_INCL) -I$(GLPK_INCL)  # tell the compiler where to find the include directories
+#LDFLAGS     := -Wl,-rpath=$(J2735_SO_DIR) # tell the linker to add a path to the j2735 shared lib 
 #-Wl is used to pass the option(rpath) to the linker --- we probably want to move this into a default rather than a hard coded location
-LIBS        := -L$(BUILD_ROOT)/lib -L$(GLPK_LIB) -L$(NETSNMP_LIB) -lmmitss-common -lglpk -lnetsnmp   #tell the linker where to find the libraries
+LIBS        := -L$(MMITSS_COMMON_LIB) -L$(GLPK_LIB) -L$(NETSNMP_LIB) -lmmitss-common -lglpk -lnetsnmp   #tell the linker where to find the libraries
 
 #cpp's go here
 SRC += M_PrioritySolver.cpp Array.cpp Config.cpp ReqEntry.cpp Signal.cpp PositionLocal3D.cpp GetInfo.cpp EVLS.cpp
