--- a/src/obu/PriorityRequestGenerator/Makefile
+++ b/src/obu/PriorityRequestGenerator/Makefile
@@ -1,16 +1,16 @@
-# Sample Makefile for building with the uper codec and json libraries
+# PRG Makefile 
 BUILD_ROOT=../../..
 MAKE_ROOT :=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/newheader.mk
 
-INCLUDES    := -I$(J2735_INCL) -I$(BUILD_ROOT)/include/common  # tell the compiler where to find the j2735 and json include directories
-LDFLAGS     := -Wl,-rpath=$(J2735_SO_DIR) # tell the linker to add a path to the json shared lib 
+INCLUDES    := -I$(J2735_INCL) -I$(COMMON_INCL) # tell the compiler where to find the include directories
+#LDFLAGS     := -Wl,-rpath=$(J2735_LIB) # tell the linker to add a path to the json shared lib 
 #-Wl is used to pass the option(rpath) to the linker --- we probably want to move this into a default rather than a hard coded location
-LIBS        := -L$(J2735_SO_DIR) -L$(BUILD_ROOT)/lib -L$(BUILD_ROOT)/3rdparty/mapengine/lib -ldsrc -lasn -lmmitss-common #tell the linker where to find the j2735 and json libraries
+LIBS        := -L$(J2735_LIB) -L$(MMITSS_COMMON_LIB) -L$(MAPENGINE_LIB) -ldsrc -lasn -lmmitss-common #tell the linker where to find the j2735 and json libraries
 
 #cpp's go here
 SRC += main.cpp PriorityRequestGenerator.cpp MapManager.cpp locAware.cpp geoUtils.cpp
-#the name of the executable goes here
+
 #the name of the executable goes here
 TARGET = PRG
 
