--- a/docker/corridors/speedway/rse82_mountain/nojournal/bin/mmitss-phase3-master-config.json
+++ b/docker/corridors/speedway/rse82_mountain/nojournal/bin/mmitss-phase3-master-config.json
@@ -17,6 +17,7 @@
 		},
 		"RsmDecoder": 10006,
 		"OBUBSMReceiver": 10005,
+        "HostBsmDecoder": 10007,
 		"TrajectoryAware": 20001,
 		"PriorityRequestServer": 20002,
 		"PrioritySOlver": 20003,
