--- a/src/common/MsgTransceiver/test/SRM Sender/Makefile
+++ b/src/common/MsgTransceiver/test/SRM Sender/Makefile
@@ -1,5 +1,5 @@
 # Sample Makefile for building with the uper codec and json libraries
-BUILD_ROOT=../../../..
+BUILD_ROOT=../../../../..
 MAKE_ROOT :=$(BUILD_ROOT)/make
 include $(MAKE_ROOT)/newheader.mk
 
