Created a static variable for the IPAddress

--- a/scripts/savariPatchConfig/DsrcForward.conf
+++ b/scripts/savariPatchConfig/DsrcForward.conf
@@ -9,7 +9,7 @@ DeliveryStop              = 01/01/2031, 00:00;
 InfusionHeaderEnable      = 0;
 InfusionMsgType           = 0;
 DestinationProtocol       = UDP;
-DestinationIP             = 10.12.6.89;
+DestinationIP             = IPADDRESS;
 DestinationPort           = 10002;
 Enable                    = 1;
 
@@ -21,7 +21,7 @@ DeliveryStop              = 01/01/2031, 00:00;
 InfusionHeaderEnable      = 0;
 InfusionMsgType           = 0;
 DestinationProtocol       = UDP;
-DestinationIP             = 10.12.6.89;
+DestinationIP             = IPADDRESS;
 DestinationPort           = 10002;
 Enable                    = 1;
 
@@ -33,7 +33,7 @@ DeliveryStop              = 01/01/2031, 00:00;
 InfusionHeaderEnable      = 0;
 InfusionMsgType           = 0;
 DestinationProtocol       = UDP;
-DestinationIP             = 10.12.6.89;
+DestinationIP             = IPADDRESS;
 DestinationPort           = 10002;
 Enable                    = 1;
 
@@ -45,7 +45,7 @@ DeliveryStop              = 01/01/2031, 00:00;
 InfusionHeaderEnable      = 0;
 InfusionMsgType           = 0;
 DestinationProtocol       = UDP;
-DestinationIP             = 10.12.6.89;
+DestinationIP             = IPADDRESS;
 DestinationPort           = 10002;
 Enable                    = 1;
 
@@ -57,6 +57,6 @@ DeliveryStop              = 01/01/2031, 00:00;
 InfusionHeaderEnable      = 0;
 InfusionMsgType           = 0;
 DestinationProtocol       = UDP;
-DestinationIP             = 10.12.6.89;
+DestinationIP             = IPADDRESS;
 DestinationPort           = 10002;
 Enable                    = 1;
