--- a/scripts/savariPatchConfig/v2vi_obe.conf
+++ b/scripts/savariPatchConfig/v2vi_obe.conf
@@ -894,7 +894,7 @@ TapEnable                          = 0;    0, 1 #Enable (1) / Disable (0) debug 
 #*   BSM Mirror
 #**************************************************************************
 BSMMirrorEnable = 1; #Enable mirroring of generated BSMs to remote host
-BSMMirrorRemoteHostIP = 10.12.6.89; #Remote Host IP to which BSMs are to be sent
+BSMMirrorRemoteHostIP = IPADDRESS; #Remote Host IP to which BSMs are to be sent
 BSMMirrirRemoteHostPort = 10005; #Remote Host Port to which BSMs are to be sent
 
 #**************************************************************************
