Transceiver Decoder has been updated to get the intersection name

--- a/src/common/MsgTransceiver/MsgDecoder/WirelessMsgDecoder/Makefile
+++ b/src/common/MsgTransceiver/MsgDecoder/WirelessMsgDecoder/Makefile
@@ -6,10 +6,10 @@ include $(MAKE_ROOT)/newheader.mk
 INCLUDES    := -I$(J2735_INCL) -I$(COMMON_INCL) # tell the compiler where to find the include directories
 #LDFLAGS     := -Wl,-rpath=$(J2735_SO_DIR) # tell the linker to add a path to the json shared lib 
 #-Wl is used to pass the option(rpath) to the linker --- we probably want to move this into a default rather than a hard coded location
-LIBS        := -L$(J2735_LIB) -L$(MMITSS_COMMON_LIB) -ldsrc -lasn -lmmitss-common #tell the linker where to find the libraries
+LIBS        := -L$(J2735_LIB) -L$(MMITSS_COMMON_LIB) -L$(MAPENGINE_LIB) -ldsrc -lasn -lmmitss-common #tell the linker where to find the libraries
 
 #cpp's go here
-SRC += main.cpp  ./../TransceiverDecoder.cpp 
+SRC += main.cpp  ./../TransceiverDecoder.cpp ./../locAware.cpp ./../geoUtils.cpp
 #the name of the executable goes here
 TARGET = WirelessMsgDecoder
 
