Update the config file for mountain

--- a/docker/corridors/speedway/rse82_mountain/nojournal/bin/mmitss-phase3-master-config.json
+++ b/docker/corridors/speedway/rse82_mountain/nojournal/bin/mmitss-phase3-master-config.json
@@ -27,6 +27,7 @@
 		"TrafficControllerObserver": 20006,
 		"PerformanceObserver": 20007,
 		"ISIG": 20008,
+        "HMIController": 20009,
 		"MapSPaTBroadcaster": 6053,
 		"RSUOBUImageForwarder": 1516,
         "PriorityRequestServer_SendSSM": 50003
