MapSpatBroadcaster now sends data to the Data-Collector as well. Configuration files changed to include the datacollector port number. Elapsed time calculation corrected

--- a/docker/corridors/speedway/rse82_mountain/nojournal/bin/mmitss-phase3-master-config.json
+++ b/docker/corridors/speedway/rse82_mountain/nojournal/bin/mmitss-phase3-master-config.json
@@ -28,7 +28,8 @@
 		"ISIG": 20008,
 		"MapSPaTBroadcaster": 6053,
 		"RSUOBUImageForwarder": 1516,
-        "PriorityRequestServer_SendSSM": 50003
+        "PriorityRequestServer_SendSSM": 50003,
+        "DataCollector": 30001
 	},
     "psid":
         {
