--- a/docker/corridors/speedway/rse81_campbell/nojournal/bin/mmitss-phase3-master-config.json
+++ b/docker/corridors/speedway/rse81_campbell/nojournal/bin/mmitss-phase3-master-config.json
@@ -29,7 +29,8 @@
 		"ISIG": 20008,
 		"MapSPaTBroadcaster": 6053,
 		"RSUOBUImageForwarder": 1516,
-        "PriorityRequestServer_SendSSM": 50003
+        "PriorityRequestServer_SendSSM": 50003,
+        "DataCollector": 30001
 	},
     "psid":
         {
