Timestamp added to SpatJson

--- a/docker/corridors/speedway/rse82_mountain/nojournal/bin/mmitss-phase3-master-config.json
+++ b/docker/corridors/speedway/rse82_mountain/nojournal/bin/mmitss-phase3-master-config.json
@@ -6,6 +6,7 @@
     "IntersectionID" : 26379,
     "RegionalID" : 0,
     "ControllerIp": "10.12.6.107",
+    "DataCollectorIP": "10.12.6.109",
     "PortNumber":
 	{
 		"MessageTransceiver":
