--- a/docker/corridors/Anthem/Daisy-Meridian/nojournal/bin/mmitss-phase3-master-config.json
+++ b/docker/corridors/Anthem/Daisy-Meridian/nojournal/bin/mmitss-phase3-master-config.json
@@ -7,6 +7,7 @@
     "RegionalID" : 0,
     "ControllerIp": "10.12.6.8",
     "HMIControllerIP": "10.12.6.56",
+    "DataCollectorIP": "10.12.6.101",
     "VehicleType" : 6,
     "PortNumber":
 	{
@@ -31,7 +32,8 @@
         "HMIController": 20009,
 		"MapSPaTBroadcaster": 6053,
 		"RSUOBUImageForwarder": 1516,
-        "PriorityRequestServer_SendSSM": 50003
+        "PriorityRequestServer_SendSSM": 50003,
+        "DataCollector": 30001
 	},
     "psid":
         {
