Changed the email address to the one created for IAM and CyVerse interaction. Changed subjectline of the email to try not marking it as spam

--- a/src/server/intersection-data-collector/config/data-collection-module-config.json
+++ b/src/server/intersection-data-collector/config/data-collection-module-config.json
@@ -3,8 +3,8 @@
     "DataCollectorEmailServer":
     {
         "Port": 30000,
-        "EmailAccount": "someone@gmail.com",
-        "Password": "some-password"
+        "EmailAccount": "iam.cyverse@gmail.com",
+        "Password": "mmitss123"
     },
     "EmailRecipients":[
     "nvaltekar@email.arizona.edu"
