--- a/src/server/intersection-data-collector/config/data-collection-module-config.json
+++ b/src/server/intersection-data-collector/config/data-collection-module-config.json
@@ -1,5 +1,5 @@
 {
-    "DataCollectorIp" : "10.12.6.101",
+    "DataCollectorIp" : "172.3.1.91",
     "DataCollectorEmailServer":
     {
         "Port": 30000,
@@ -7,7 +7,8 @@
         "Password": "mmitss123"
     },
     "EmailRecipients":[
-    "nvaltekar@email.arizona.edu"
+    "nvaltekar@email.arizona.edu",
+    "klhead@email.arizona.edu",
     ]
 
 }
